vlib/v/checker/tests/infix_err.out
vlib/v/checker/tests/infix_err.vv:7:8: error: mismatched types `string` and `?string`
    5 |     return none
    6 | }
    7 | _ = '' + f()
      |        ^
    8 | _ = f() + ''
    9 | _ = f() + f()
vlib/v/checker/tests/infix_err.vv:8:9: error: mismatched types `?string` and `string`
    6 | }
    7 | _ = '' + f()
    8 | _ = f() + ''
      |         ^
    9 | _ = f() + f()
   10 |
vlib/v/checker/tests/infix_err.vv:9:9: error: `+` cannot be used with `?string`
    7 | _ = '' + f()
    8 | _ = f() + ''
    9 | _ = f() + f()
      |         ^
   10 | 
   11 | _ = 4 + g()
vlib/v/checker/tests/infix_err.vv:11:7: error: `+` cannot be used with `?int`
    9 | _ = f() + f()
   10 | 
   11 | _ = 4 + g()
      |       ^
   12 | _ = int(0) + g() // FIXME not detected
   13 | _ = g() + int(3)
vlib/v/checker/tests/infix_err.vv:12:12: error: unwrapped optional cannot be used in an infix expression
   10 | 
   11 | _ = 4 + g()
   12 | _ = int(0) + g() // FIXME not detected
      |            ^
   13 | _ = g() + int(3)
   14 | _ = g() + 3
vlib/v/checker/tests/infix_err.vv:13:9: error: `+` cannot be used with `?int`
   11 | _ = 4 + g()
   12 | _ = int(0) + g() // FIXME not detected
   13 | _ = g() + int(3)
      |         ^
   14 | _ = g() + 3
   15 |
vlib/v/checker/tests/infix_err.vv:14:9: error: `+` cannot be used with `?int`
   12 | _ = int(0) + g() // FIXME not detected
   13 | _ = g() + int(3)
   14 | _ = g() + 3
      |         ^
   15 | 
   16 | // binary operands
vlib/v/checker/tests/infix_err.vv:17:5: error: left operand for `&&` is not a boolean
   15 | 
   16 | // binary operands
   17 | _ = 1 && 2
      |     ^
   18 | _ = true || 2
vlib/v/checker/tests/infix_err.vv:18:13: error: right operand for `||` is not a boolean
   16 | // binary operands
   17 | _ = 1 && 2
   18 | _ = true || 2
      |             ^
